Fixed collapse button bug and removed unneeded loop func

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,17 +1,38 @@
-header{
+html {
+     width: 100%;
+     height: 100%;
+     display: table;
+}
+
+body {
+     width: 100%;
+     display: table-cell;
+}
+
+html, body {
+     margin: 0;
+     padding: 0;
+}
+
+header {
      display: flex;
      justify-content: space-between;
      padding: 0.5rem;
 }
 
-main{
+main {
      display: flex;
      flex-direction: column;
      align-items: center;
      margin: 0rem 15rem;
 }
 
-h1, h2, main > p {
+footer{
+     display: flex;
+     justify-content: flex-end;
+}
+
+#heading {
      text-align: center;
 }
 
@@ -63,11 +84,20 @@ th, td {
 }
 
 #remainingGamesList {
-     list-style-type: none;
+     position: relative;
      padding: 0;
 }
 
-@media screen and (max-width: 1600px){ 
+#links {
+     display: flex;
+     justify-content: flex-end;
+}
+
+#links > a {
+     margin: 0.5rem;
+}
+
+@media screen and (max-width: 1650px){ 
 	main{
           margin: 0rem;
      }
@@ -80,7 +110,7 @@ th, td {
 }
 
 @media screen and (max-width: 600px){ 
-	main > p {
+	#heading {
           margin: 0rem 1rem;
      }
 }
